更新页面适配手机

--- a/src/main/resources/static/login/login.html
+++ b/src/main/resources/static/login/login.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<HEAD>
 		<META http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=0,user-scalable=yes,maximum-scale=1.0">
 		<TITLE>static登陆页面</TITLE>
 		<!-- ================= 页面头的图标 ================== -->
 		<link rel="icon" type="image/x-icon" href="/img/wechat.jpg"/>
