主页面加入适配手机

--- a/src/main/resources/static/main/main.html
+++ b/src/main/resources/static/main/main.html
@@ -5,7 +5,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="author" content="smartit-source">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">	
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=0,user-scalable=yes,maximum-scale=1.0">
     <!-- title here -->
     <title>Xfars - Personal Tour Travelers Blog HTML5 Template</title>		
     <!-- Favicon and Touch Icons -->
