--- a/src/main/resources/static/home/main.html
+++ b/src/main/resources/static/home/main.html
@@ -12,25 +12,26 @@
             background-color: white;
             color:#000000;
         }
-    </style> 
+    </style>
 </head>
 <body>
-    <h3 style="color:#5555FF;">Jiun-Hao</h3>
-    <div style="width: auto;height: 50px;">
-        <div style="width: 50px;height: 50px;float: left;">
-            <img src="image/wechat.jpg" style="width:100%;height:auto;border-radius:25px">
-        </div>
-        <div style="width: auto;height:50px;float: left;padding-left: 10px;">
-            <b style="font-size: 20px;">王大锤</b>
-            <br>
-            <div>
-                今天13：49
-            </div>
+<h3 style="color:#5555FF;">Jiun-Hao</h3>
+<div style="width: auto;height: 50px;">
+    <div style="width: 50px;height: 50px;float: left;">
+        <img src="image/wechat.jpg" style="width:100%;height:auto;border-radius:25px">
+    </div>
+    <div style="width: auto;height:50px;float: left;padding-left: 10px;">
+        <span style="font-size: 20px;">王大锤</span>
+        <br>
+        <div style="color:#969696">
+            今天13：49
         </div>
     </div>
-    <div style="padding-top: 5px;">
-        新的一年暴富，开心。
-        <img src="image/qq.png" style="width:100%;height:auto;">
-    </div>
+</div>
+<div style="padding-top: 5px;">
+        <span style="font-size: 18px;">
+            新的一年暴富，开心。</span>
+    <img src="image/qq.png" style="width:100%;height:auto;">
+</div>
 </body>
 </html>
