更新主页面

--- a/src/main/resources/static/main/main.html
+++ b/src/main/resources/static/main/main.html
@@ -203,6 +203,8 @@
 <!--    </style>-->
 </head>
 <body>
+
+    <a href="/home/main.html">点这里</a>
     <!-- header area start here -->
     <header class="header-area header-one" id="sticky">
         <div class="container">
