--- a/src/main/resources/static/home/main.html
+++ b/src/main/resources/static/home/main.html
@@ -15,23 +15,46 @@
     </style>
 </head>
 <body>
-<h3 style="color:#5555FF;">Jiun-Hao</h3>
-<div style="width: auto;height: 50px;">
-    <div style="width: 50px;height: 50px;float: left;">
-        <img src="image/wechat.jpg" style="width:100%;height:auto;border-radius:25px">
-    </div>
-    <div style="width: auto;height:50px;float: left;padding-left: 10px;">
-        <span style="font-size: 20px;">王大锤</span>
-        <br>
-        <div style="color:#969696">
-            今天13：49
+<div>
+    <!-- <h3 style="color:#5555FF;">Jiun-Hao</h3> -->
+    <div style="width: auto;height: 50px;">
+        <div style="width: 50px;height: 50px;float: left;">
+            <img src="/home/image/zhuzhu.jpg" style="width:100%;height:auto;border-radius:25px">
+        </div>
+        <div style="width: auto;height:50px;float: left;padding-left: 10px;">
+            <span style="font-size: 20px;">何猪猪</span>
+            <br>
+            <div style="color:#969696">
+                今天13：49
+            </div>
         </div>
     </div>
-</div>
-<div style="padding-top: 5px;">
+    <div style="padding-top: 5px;">
         <span style="font-size: 18px;">
             新的一年暴富，开心。</span>
-    <img src="image/qq.png" style="width:100%;height:auto;">
+        <img src="image/qq.png" style="width:100%;height:auto;">
+    </div>
+</div>
+
+<div style="padding-top: 20px;">
+    <!-- <h3 style="color:#5555FF;">Jiun-Hao</h3> -->
+    <div style="width: auto;height: 50px;">
+        <div style="width: 50px;height: 50px;float: left;">
+            <img src="/home/image/wechat.jpg" style="width:100%;height:auto;border-radius:25px">
+        </div>
+        <div style="width: auto;height:50px;float: left;padding-left: 10px;">
+            <span style="font-size: 20px;">王大锤</span>
+            <br>
+            <div style="color:#969696">
+                今天13：49
+            </div>
+        </div>
+    </div>
+    <div style="padding-top: 5px;">
+        <span style="font-size: 18px;">
+            新的一年猪猪暴富，我可以傍富婆了开心。</span>
+        <img src="image/qq.png" style="width:100%;height:auto;">
+    </div>
 </div>
 </body>
 </html>
