--- a/src/main/resources/static/home/main.html
+++ b/src/main/resources/static/home/main.html
@@ -19,7 +19,7 @@
     <!-- <h3 style="color:#5555FF;">Jiun-Hao</h3> -->
     <div style="width: auto;height: 50px;">
         <div style="width: 50px;height: 50px;float: left;">
-            <img src="/home/image/zhuzhu.jpg" style="width:100%;height:auto;border-radius:25px">
+            <img src="image/zhuzhu.jpg" style="width:100%;height:auto;border-radius:25px">
         </div>
         <div style="width: auto;height:50px;float: left;padding-left: 10px;">
             <span style="font-size: 20px;">何猪猪</span>
@@ -40,7 +40,7 @@
     <!-- <h3 style="color:#5555FF;">Jiun-Hao</h3> -->
     <div style="width: auto;height: 50px;">
         <div style="width: 50px;height: 50px;float: left;">
-            <img src="/home/image/wechat.jpg" style="width:100%;height:auto;border-radius:25px">
+            <img src="image/wechat.jpg" style="width:100%;height:auto;border-radius:25px">
         </div>
         <div style="width: auto;height:50px;float: left;padding-left: 10px;">
             <span style="font-size: 20px;">王大锤</span>
@@ -56,5 +56,27 @@
         <img src="image/qq.png" style="width:100%;height:auto;">
     </div>
 </div>
+
+<div style="padding-top: 20px;">
+    <!-- <h3 style="color:#5555FF;">Jiun-Hao</h3> -->
+    <div style="width: auto;height: 50px;">
+        <div style="width: 50px;height: 50px;float: left;">
+            <img src="image/qzl.jpg" style="width:100%;height:auto;border-radius:25px">
+        </div>
+        <div style="width: auto;height:50px;float: left;padding-left: 10px;">
+            <span style="font-size: 20px;">权志龙</span>
+            <br>
+            <div style="color:#969696">
+                今天13：49
+            </div>
+        </div>
+    </div>
+    <div style="padding-top: 5px;">
+        <span style="font-size: 18px;">
+            今天天气还不错哦。</span>
+        <img src="image/tq.jpg" style="width:100%;height:auto;">
+    </div>
+</div>
+
 </body>
 </html>
